feature: added test cases and update logic

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angstorage",
-  "version": "0.0.0",
+  "version": "4.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^16.2.12",
     "@angular/common": "^16.2.12",
